# projBeeware

./: LICENSE  README.md  pyproject.toml
projetobeewarecomtoga/: CHANGELOG  LICENSE  README.rst  pyproject.toml
projetobeewarecomtoga/src/projetobeewarecomtoga/: __main__.py  app.py
