[tool.poetry]
name = "projbeeware"
version = "0.1.0"
description = "Projeto beeware com Toga"
authors = ["armarjr <armarcm.job@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
